--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name     = org.h2.Driver
-spring.datasource.url                   = jdbc:h2:~/consultas;AUTO_SERVER=TRUE
+spring.datasource.url                   = jdbc:h2:~/consulta;AUTO_SERVER=TRUE
 spring.datasource.username              = sa
 spring.datasource.password              =
 spring.jpa.hibernate.ddl-auto           = update
