--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.jpa.show-sql                     = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 
-server.port=8081
+server.port                             = 8081
+
+consultas.jwt.expiration                = 86400000
+consultas.jwt.secret                    = "123"
