--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name     = org.h2.Driver
 spring.datasource.url                   = jdbc:h2:~/consultas;AUTO_SERVER=TRUE
 spring.datasource.username              = sa
 spring.datasource.password              =
-spring.jpa.hibernate.ddl-auto           = create-drop
+spring.jpa.hibernate.ddl-auto           = update
 spring.jpa.show-sql                     = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
